Update CI/CD workflows and configuration files

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DEFAULT_MODEL=gpt-3.5-turbo
 
 # Logging Configuration
 LOG_LEVEL=INFO
-LOG_FILE=ai_masterclass.log
+LOG_FILE=bosskit.log
 
 # Rate Limiting
 RATE_LIMIT_REQUESTS_PER_MINUTE=60
