Update test.yml to set PYTHONPATH for pytest

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Run tests
       run: |
-        pytest --cov=.
+        PYTHONPATH=$(pwd) pytest --cov=.
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
