--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -13,7 +13,7 @@ coverage==7.3.2
 pytest-mock==3.11.1
 json5>=0.9.13
 oslex>=0.1.0
-sphinx>=7.2.6
+sphinx>=6.2.1,<7
 sphinx-rtd-theme>=1.3.0
 sphinx-autodoc-typehints>=1.25.0
 sphinxcontrib-apidoc>=0.4.0
