--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -15,5 +15,5 @@ json5>=0.9.13
 oslex>=0.1.0
 sphinx>=6.2.1,<7
 sphinx-rtd-theme>=1.3.0
-sphinx-autodoc-typehints>=1.25.0
+sphinx-autodoc-typehints>=1.24.0,<1.25
 sphinxcontrib-apidoc>=0.4.0
